# eo-scrapers

./: README.md  pyproject.toml
examples/: fetch_system_price.py
sql/: 001_initial_schema.sql
src/eo_scrapers/: __init__.py  cli.py  scheduler.py
src/eo_scrapers/clients/: __init__.py  base.py  carbon_intensity.py  elexon.py
src/eo_scrapers/models/: __init__.py  carbon.py  price.py
src/eo_scrapers/storage/: __init__.py  supabase.py
src/eo_scrapers/utils/: __init__.py  time.py
tests/: __init__.py  test_elexon.py
