[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eo-scrapers"
version = "0.1.0"
description = "Energy data API clients for EnergyOracle - PPA settlement reference prices"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "EnergyOracle", email = "dev@energyoracle.io" }
]
keywords = ["energy", "oracle", "ppa", "elexon", "uk-energy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.5.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/energyoracle/eo-scrapers"
Documentation = "https://docs.energyoracle.io"

[tool.hatch.build.targets.wheel]
packages = ["src/eo_scrapers"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
